# NEXT

./: .gitignore  .ignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_msvc.bat  build_vs.bat  env_setup.bat  setup_env.bat
.claude/: ralph-loop.local.md
assets/: test_checker.texture  test_cube.mesh  test_pbr.material  tri.mesh  tri.npkg  tri_import.npkg
docs/: 00-vision-principles.md  01-engine-structure.md  02-rendering-roadmap.md  03-world-streaming-time.md  04-ai-systems.md  05-scripting-quests.md  06-tools-modding-experiments.md  07-milestones.md  08-development-workflow.md  ASSET_PIPELINE_QUICKSTART.md  BUG_ASSESSMENT_REPORT.md  BUILD_STATUS_REPORT.md  CODE_STYLE.md  COMPREHENSIVE_FILL_HOLES_PLAN.md  CP0_COMPLETION.md  CP1_COMPLETION.md  CP2_COMPLETION.md  CP3_COMPLETION.md  CP4_COMPLETION.md  CP5_GAP_ANALYSIS.md  CP5_P0_FIX_REPORT.md  CP5_PHASE1_COMPLETION.md  CP5_PHASE2_COMPLETION.md  CP5_PHASE3_COMPLETION.md  CP5_PHASE4_COMPLETION.md  CP5_PHASE5_COMPLETION.md  CP5_PROGRESS.md  CP6_COMPLETION.md  CP6_FINAL_COMPLETION.md  CP7_FINAL_COMPLETION.md  CP8_COMPLETION.md  CP8_LUA_INTEGRATION_GUIDE.md  (+24 more)
engine/log/: CMakeLists.txt
engine/log/example/: log_usage_example.cpp
engine/log/include/next/log/: log.h
engine/log/src/: log.cpp
engine/ops/: CMakeLists.txt  README.md
engine/ops/include/next/ops/: ops_workspace.h  policy_simulation.h  python_worker.h
engine/ops/src/: ops_workspace.cpp  policy_simulation.cpp  python_worker.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/next/platform/: input.h  platform.h  window.h
engine/platform/src/: input.cpp  platform.cpp  window.cpp
engine/platform/src/apple/: window_cocoa.mm
engine/platform/src/windows/: input_win32.cpp  platform_win32.cpp  window_win32.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/next/renderer/: render_graph.h  renderer.h
engine/renderer/include/next/renderer/dx12/: ambient_occlusion.h  buffer.h  command_list.h  command_queue.h  constant_buffer.h  cube_renderer.h  d3dx12.h  debug_views.h  depth_buffer.h  descriptor_allocator.h  descriptor_heap.h  device.h  dx12_renderer.h  fence.h  global_illumination.h  light.h  light_probe.h  material.h  mesh_shader_pass.h  pbr_material.h  pbr_renderer.h  pipeline_state.h  post_processing.h  rendering_stats.h  root_signature.h  sampler.h  shader.h  shader_compiler.h  swapchain.h  taa.h  texture.h
engine/renderer/include/next/renderer/math/: math.h
engine/renderer/include/next/renderer/metal/: metal_renderer.h
engine/renderer/shaders/: cube.ps.hlsl  cube.vs.hlsl  ddgi.hlsl  ddgi_render.ps.hlsl  gi_combine.ps.hlsl  gtao.hlsl  gtao_filter.hlsl  hbao.hlsl  light_probe.hlsl  mesh_debug.ms.hlsl  mesh_debug.ps.hlsl  pbr.ps.hlsl  pbr.vs.hlsl  pbr_simple.ps.hlsl  pbr_step1.ps.hlsl  post_process.ps.hlsl  post_process.vs.hlsl  rtgi.raytracing.hlsl  sampler_feedback.cs.hlsl  screen_space_probe_gi.ps.hlsl  taa_resolve.ps.hlsl  triangle.ps.hlsl  triangle.vs.hlsl  vxao.hlsl  vxgi_cone_trace.ps.hlsl  vxgi_voxelize.cs.hlsl
engine/renderer/src/: render_graph.cpp  renderer.cpp
engine/renderer/src/dx12/: ambient_occlusion.cpp  buffer.cpp  command_list.cpp  command_queue.cpp  constant_buffer.cpp  cube_renderer.cpp  debug_views.cpp  depth_buffer.cpp  descriptor_allocator.cpp  descriptor_heap.cpp  device.cpp  dx12_renderer.cpp  fence.cpp  global_illumination.cpp  light_probe.cpp  material.cpp  mesh_shader_pass.cpp  pbr_material.cpp  pbr_renderer.cpp  pipeline_state.cpp  post_processing.cpp  rendering_stats.cpp  root_signature.cpp  sampler.cpp  shader.cpp  shader_compiler.cpp  swapchain.cpp  taa.cpp  texture.cpp
engine/renderer/src/metal/: metal_renderer.mm
engine/runtime/: CMakeLists.txt
engine/runtime/asset/: CMakeLists.txt
engine/runtime/asset/include/next/runtime/asset/: asset_handle.h  asset_manager.h  asset_types.h  package_container.h
engine/runtime/asset/src/: asset_handle.cpp  asset_manager.cpp  asset_types.cpp  package_container.cpp
engine/runtime/include/next/runtime/: component.h  component_type.h  entity.h  event_bus.h  query.h  system.h  transform.h  world.h
engine/runtime/src/: component_registry.cpp  entity.cpp  event_bus.cpp  system.cpp  world.cpp
engine/script/: CMakeLists.txt
engine/script/include/next/script/: script_system.h
engine/script/src/: script_system.cpp
engine/serialization/: CMakeLists.txt
engine/serialization/example/: serialization_example.cpp
engine/serialization/include/next/serialization/: serialization.h  world_serializer.h
engine/serialization/src/: serialization.cpp
engine/task/: CMakeLists.txt
engine/task/include/next/task/: task_system.h
engine/task/src/: task_system.cpp
engine/terminal/: CMakeLists.txt  README.md
engine/terminal/include/next/terminal/: nvim_surface.h
engine/terminal/src/: nvim_surface.cpp
engine/world/: CMakeLists.txt
engine/world/include/next/streaming/: async_io.h  debug_visualization.h  eviction_policy.h  interest_manager.h  lod_system.h  prediction_system.h  streaming_manager.h  world_partition.h
engine/world/src/: async_io.cpp  debug_visualization.cpp  eviction_policy.cpp  interest_manager.cpp  lod_system.cpp  prediction_system.cpp  streaming_manager.cpp  world_partition.cpp
game/song/: CMakeLists.txt
game/song/include/song/: game.h
game/song/src/: game.cpp  main.cpp
tests/: CMakeLists.txt
tests/foundation/: test_assert.cpp  test_logger.cpp
tests/jobsystem/: test_job.cpp  test_job_system.cpp
tests/math/: test_math.cpp
tests/platform/: test_input.cpp  test_window.cpp
tests/runtime/: test_asset_integration.cpp  test_component.cpp  test_edge_cases.cpp  test_entity.cpp  test_query.cpp  test_system.cpp  test_world.cpp
tests/script/: test_script_system.cpp
tests/task/: test_task_save_load.cpp
tests/world/: test_interest_manager.cpp  test_streaming_manager.cpp
tools/assetc/: CMakeLists.txt
tools/assetc/src/: asset_compiler.cpp  asset_compiler.h  main.cpp  obj_loader.cpp  obj_loader.h  tga_loader.cpp  tga_loader.h
tools/editor/: CMakeLists.txt
tools/editor/src/: main.cpp
(+48 files in other folders)
